--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,10 +324,16 @@ label.fname, label.lname, label.email, label.class, label.email, label.class_sel
     line-height: 1.5;
 }
   
-.text-input {
+#fname, #lname, #email {
     font-family: "Futura-PT", sans-serif;
-    border: 1px solid gray;
     color: #4ba0b5;
+}
+
+.form-control::placeholder,
+.form-control::-webkit-input-placeholder,
+.form-control::-moz-placeholder,
+.form-control:-ms-input-placeholder {
+    font-family: "Futura-PT", sans-serif;
 }
 
 button.btn.btn-info {
@@ -386,7 +392,7 @@ form {
 }
 
 input, 
-textarea {
+.form-control {
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
     font-family: 'Futura-PT', sans-serif;
     color: #69a8a9;
@@ -394,9 +400,8 @@ textarea {
 
 #date {
     font-size: 1rem;
-    width: 140px;
-    height: 30px;
-    font-size: 1rem;
+    width: 200px;
+    height: 50px;
   }
   
   .fas.fa-calendar {
@@ -484,25 +489,14 @@ button.btn.btn-info.float-right:hover {
     margin-top: 20px;
 }
 
-.form-control::-webkit-input-placeholder {
-    font-family: 'Futura-PT', sans-serif;
-}
-
-.form-control::-moz-placeholder {
-    font-family: 'Futura-PT', sans-serif;
-}
-
-.form-control:-ms-input-placeholder {
-    font-family: 'Futura-PT', sans-serif;
-}
-
-.form-control::-ms-input-placeholder {
-    font-family: 'Futura-PT', sans-serif;
-}
-
+.form-control::-webkit-input-placeholder, 
+.form-control::-moz-placeholder,
+.form-control:-ms-input-placeholder,
+.form-control::-ms-input-placeholder, 
 .form-control::placeholder {
-    font-family: 'Futura-PT', sans-serif;
+
 }
+
 
 /*-------------------------------------------- Footer */
 footer {
