--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -593,114 +593,211 @@ footer h6 {
 }
 
 body {
-  padding: 0;
-  margin: 0;
-}
-
-#notfound {
-  position: relative;
-  height: 100vh;
-  background: #030005;
-}
-
-#notfound .notfound {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.notfound {
-  max-width: 767px;
-  width: 100%;
-  line-height: 1.4;
-  text-align: center;
-}
-
-.notfound .notfound-404 {
-  position: relative;
-  height: 180px;
-  margin-bottom: 20px;
-  z-index: -1;
-}
-
-.notfound .notfound-404 h1 {
-  font-family: 'Montserrat', sans-serif;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50% , -50%);
-      -ms-transform: translate(-50% , -50%);
-          transform: translate(-50% , -50%);
-  font-size: 224px;
-  font-weight: 900;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: -12px;
-  color: #030005;
-  text-transform: uppercase;
-  text-shadow: -2px -2px 0px #69aaab, 1px 1px 0px #ff005a;
-  letter-spacing: -20px;
-}
-
-
-.notfound .notfound-404 h2 {
-  font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 110px;
-  font-size: 42px;
-  font-weight: 700;
-  color: #fff;
-  text-transform: uppercase;
-  text-shadow: 2px 2px 0px #69aaab;
-  letter-spacing: 13px;
-  margin: 0;
-}
-
-.notfound a {
-  font-family: 'Montserrat', sans-serif;
-  display: inline-block;
-  text-transform: uppercase;
-  color: #ff005a;
-  text-decoration: none;
-  border: 2px solid;
-  background: transparent;
-  padding: 10px 40px;
-  font-size: 14px;
-  font-weight: 700;
-  -webkit-transition: 0.2s all;
-  transition: 0.2s all;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.notfound a:hover {
-  background-color: #69aaab;
-  border-color: transparent;
-  color: #fff;
-}
-
-a.button:hover {
-  background-color: #ff005a;
-  border-color: transparent;
-  color: #fff;
-}
-
-@media only screen and (max-width: 767px) {
-    .notfound .notfound-404 h2 {
-        font-size: 24px;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-  .notfound .notfound-404 h1 {
-      font-size: 182px;
+    padding: 0;
+    margin: 0;
+    background-color: #eee;
   }
-}
+  
+  #notfound {
+    position: relative;
+    height: 100vh;
+  }
+  
+  #notfound .notfound {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  
+  #notfound .notfound-bg {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    overflow: hidden;
+  }
+  
+  #notfound .notfound-bg>div {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 1px;
+    background-color: #eee;
+  }
+  
+  #notfound .notfound-bg>div:nth-child(1) {
+    left: 20%;
+  }
+  
+  #notfound .notfound-bg>div:nth-child(2) {
+    left: 40%
+  }
+  
+  #notfound .notfound-bg>div:nth-child(3) {
+    left: 60%
+  }
+  
+  #notfound .notfound-bg>div:nth-child(4) {
+    left: 80%
+  }
+  
+  #notfound .notfound-bg>div:after {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: -0.5px;
+    -webkit-transform: translateY(-170px);
+        -ms-transform: translateY(-170px);
+            transform: translateY(-170px);
+    height: 170px;
+    width: 3px;
+    background-color: #69a8a9;
+  }
+  
+  @-webkit-keyframes drop {
+    90% {
+      height: 20px;
+    }
+    100% {
+      height: 170px;
+      -webkit-transform: translateY(calc(100vh + 170px));
+              transform: translateY(calc(100vh + 170px));
+    }
+  }
+  
+  @keyframes drop {
+    90% {
+      height: 20px;
+    }
+    100% {
+      height: 170px;
+      -webkit-transform: translateY(calc(100vh + 170px));
+              transform: translateY(calc(100vh + 170px));
+    }
+  }
+  
+  #notfound .notfound-bg>div:nth-child(1):after {
+    -webkit-animation: drop 3s infinite linear;
+            animation: drop 3s infinite linear;
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s;
+  }
+  
+  #notfound .notfound-bg>div:nth-child(2):after {
+    -webkit-animation: drop 2s infinite linear;
+            animation: drop 2s infinite linear;
+    -webkit-animation-delay: 0.7s;
+            animation-delay: 0.7s;
+  }
+  
+  #notfound .notfound-bg>div:nth-child(3):after {
+    -webkit-animation: drop 3s infinite linear;
+            animation: drop 3s infinite linear;
+    -webkit-animation-delay: 0.9s;
+            animation-delay: 0.9s;
+  }
+  
+  #notfound .notfound-bg>div:nth-child(4):after {
+    -webkit-animation: drop 2s infinite linear;
+            animation: drop 2s infinite linear;
+    -webkit-animation-delay: 1.2s;
+            animation-delay: 1.2s;
+  }
+  
+  .notfound {
+    max-width: 520px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .notfound .notfound-404 {
+    height: 210px;
+    line-height: 210px;
+  }
+  
+  .notfound .notfound-404 h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700; 
+    font-style: normal;  
+    font-size: 200px;
+    margin: 0px;
+    text-shadow: -2px -2px 0px #69aaab, 1px 1px 0px #f71e6bbf;
+    letter-spacing: -5px;
+  }
+  
+  .notfound h2 {
+    font-family: 'Dolce', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    margin: 0;
+    text-shadow: 1px 2px 0px #69a8a9;
+  }
+  
+  .notfound a {
+    margin-top: 20px;
+    font-family: 'Futura-PT', sans-serif;
+    padding: 10px 30px;
+    display: inline-block;
+    color: #000;
+    font-weight: 400;
+    text-transform: uppercase;
+    -webkit-box-shadow: 0px 0px 0px 2px #000, 2px 2px 0px 2px #69a8a9;
+            box-shadow: 0px 0px 0px 2px #000, 2px 2px 0px 2px #69a8a9;
+    text-decoration: none;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+  }
+  
+  .notfound a:hover {
+    background-color: #69a8a9;
+    -webkit-box-shadow: 0px 0px 0px 0px #000, 0px 0px 0px 2px #69a8a9;
+            box-shadow: 0px 0px 0px 0px #000, 0px 0px 0px 2px #69a8a9;
+  }
+  
+  .notfound-social {
+    margin-top: 35px;
+  }
+  
+  .notfound-social>a {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    padding: 0px;
+    margin: 0px 5px;
+  }
+  
+  .notfound-social>a:hover {
+    background-color: #69a8a9;
+    -webkit-box-shadow: 0px 0px 0px 0px #000, 0px 0px 0px 2px #69a8a9;
+            box-shadow: 0px 0px 0px 0px #000, 0px 0px 0px 2px #69a8a9;
+  }
+  
+  @media only screen and (max-width: 480px) {
+    .notfound .notfound-404 {
+      height: 122px;
+      line-height: 122px;
+    }
+    .notfound .notfound-404 h1 {
+      font-size: 122px;
+    }
+    .notfound h2 {
+      font-size: 26px;
+    }
+  }
+  
+  a.button {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  
+i.404.fab.fa-instagram, 
+i.404.fab.fa-facebook,
+i.404.fab.fa-pinterest,
+i.404.fab.fa-twitter {
+    font-size: 0px;
+    color: #081108;
+  }
