--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,600&display=swap');
 
 /*-----------------------------------------Global Styles */
-
 html {
     font-size: 16px;
 }
@@ -20,12 +19,14 @@ hr {
     border-top: 3px solid #69a8a9;
 }
 
+#description {
+  padding-left: 60px;
+  padding-right: 60px;
+  text-align: center;
+  margin: 20px 0;
+}
+
 /* https://www.w3schools.com/cssref/sel_selection.asp */
-::-moz-selection { /* Code for Firefox */
-    color: #f2f2f2;
-    background: #69a8a9;
-  }
-  
 ::selection {
     color: #f2f2f2;
     background: #69a8a9;
@@ -43,6 +44,7 @@ h2 {
     font-style: italic;
     text-align: center;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 h3 {
@@ -190,35 +192,18 @@ h2.lead {
 /* end jumbotron */
 
 /*-------------------------------------------- About */
+h3.about-header {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
 .about i {
     margin-bottom: 20px;
     line-height: 45px;
 }
 
-dt {
-  font-family: 'Playfair Display', serif;
-  font-style: italic;
-  text-align: center;
-  color: #011826;
-  font-size: 1.2rem;
-}
-
-dd {
-  font-family: 'Futura-PT', sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  margin: 0 auto;
-  float: none;
-  margin-bottom: 40px;
-}
-
 mark {
   background-color: #bde0e12b;
-}
-
-p.about-description {
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 i.fas.fa-yin-yang.d-sm-block,
@@ -323,111 +308,8 @@ div.signUp, a.nav-item {
 }
 /* end schedule */
 
-/*-------------------------------------------- Sign Up Form */
-label.fname, label.lname, label.email, label.class_selection {
-    font-family: "Futura-PT", sans-serif;
-    font-size: 1rem;
-    text-align: left;
-    line-height: 1.5;
-}
-
-#fname, #lname, #email,
-#fname2, #lname2, #email2,
-#fname3, #lname3, #email3 {
-    font-family: 'Futura-PT', sans-serif;
-    color: #69a8a9;
-    width: 60%;
-}
-
-.modal-open, .model-content {
-    overflow: hidden;
-    font-size: 1rem;
-    font-family: 'Futura-PT', sans-serif;
-}
-
-.modal-top.top-color {
-  background-color: #69a8a9 !important;
-  height: 100px;
-}
-
-h2.modal-title {
-  color: #fff;
-  text-shadow: 1px 1px 1px #011801;
-  text-align: center;
-}
-
-input.form-control, input, textarea, textarea.form-group, 
-textarea.form-control {
-    box-shadow: 1px 1px 1px 1px rgba(153, 163, 165, 0.5);
-    font-family: 'Futura-PT', sans-serif;
-    color: #69a8a9;
-    width: -webkit-fill-available;
-    height: auto;
-    margin: 0 auto;
-}
-
-input.btn.btn-info {
-    font-family: "Playfair Display", serif;
-    font-size: 16px;
-    font-style: italic;
-    background-color: #69a8a9;
-    border-color: transparent;
-    margin-bottom: 5px;
-    max-width: 6rem;
-    height: auto;
-}
-
-input.btn.btn-info:hover {
-    font-family: "Playfair Display", serif;
-    font-size: 16px;
-    font-style: italic;
-    background-color: #011801;
-    border-color: transparent;
-    color: #f2f2f2;
-    margin-bottom: 5px;
-    max-width: 6rem;
-    height: auto;
-}
-
-button.close {
-    margin-top: 20px;
-    font-size: 2.1rem;
-    color: #011801;
-}
-
-button.close:hover {
-    font-size: 2.1rem;
-    color: #69a8a9;
-}
-
-a.nav-link:hover,
-a.nav-link.active.signUp:hover {
-	color: #69a8a9;
-	border-radius: 2px;
-	-webkit-transition: all 0.4s;
-	-o-transition: all 0.4s;
-	transition: all 0.4s;
-}
-
-.nav-link {
-	display: block;
-}
-
-input[type=checkbox], input[type=radio] {
-    box-sizing: border-box;
-    padding: 0;
-    background-color: transparent;
-    box-shadow: none;
-}
-
-form {
-    position: relative;
-}
-/* end signup-form */
-
-/*-------------------------------------------- Quotes */
-.container-wrapper-quotes{
-    background: rgba(135, 156, 166, 0.2);
+/*-------------------------------------------- Reviews */
+.container-wrapper-reviews{
     text-align: center;
 }
 
@@ -435,14 +317,14 @@ form {
     background-color: #69a8a9 !important;
 }
 
-.quote-card .card-top {
+.review-card .card-top {
     height: 120px;
     overflow: hidden;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
 }
   
-.quote-card .avatar {
+.review-card .avatar {
     width: 120px;
     margin-top: -60px;
     overflow: hidden;
@@ -455,15 +337,15 @@ form {
     height: auto;
 }
 
-.card.quote-card.h-100 {
+.card.review-card.h-100 {
     background-color: #fff;
     -webkit-box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
     box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
   }
   
-  .col-xs-8.col-sm-4 {
+.col-xs-8.col-sm-4 {
     margin-top: 20px;
-  }
+}
 
   .card-body {
     -webkit-box-flex: 1;
@@ -480,7 +362,73 @@ blockquote {
     margin-bottom: 20px;
     padding: 10px 10px;
 }
-/* end quotes */
+/* end reviews */
+
+/*--------------------------------------------  Contact Section */
+.container-wrapper-contact {
+  color: #000;
+  background: rgba(135, 156, 166, 0.2);
+}
+
+.contact-form {
+  padding: 20px;
+  margin: 30px auto;
+  font-family: "Futura-pt", sans-serif;
+}	
+
+.contact-form .form-group {
+  margin-bottom: 20px;
+}
+
+.contact-form .form-control, .contact-form .btn {
+  min-height: 38px;
+  border-radius: 2px;
+}
+
+.contact-form .form-control {
+border-color: #011801;
+box-shadow: 1px 1px 6px #011801;
+}
+
+.contact-form .form-control:focus {
+border-color: #011801;
+box-shadow: 1px 1px 2px #011801;
+}
+
+.contact-form .btn-primary:hover {
+  color: #fff; 
+}
+.contact-form .btn-primary i {
+  margin-right: 5px;
+}
+.contact-form label {
+ font-family: "Futura-pt", sans-serif;
+font-size: 1.1rem;
+font-weight: 500;
+color: #011801;
+}
+
+.contact-form textarea, input, #inputName, #inputEmail, #inputSubject, #inputMessage {
+  resize: vertical;
+  font-family: "Futura-pt", sans-serif;
+  color: #081108;
+}
+
+ul.contact-details, ul.studio-details {
+  list-style: none;
+  letter-spacing: px;
+}
+
+#contact-info {
+  padding-left: 10px;
+  display: flex;
+  align-items: flex-start;
+}
+
+/*--------------------------------------------./contact-section */
+
+
+
 
 /*-------------------------------------------- Contact */
 .row.contact {
@@ -488,7 +436,7 @@ blockquote {
 }
 
 button.btn.btn-info.float-right {
-    background-color: #69a8a9;
+  background-color: #011801;
     border-color: transparent;
     font-family: 'Playfair Display', serif;
     color: #fff;
@@ -537,7 +485,7 @@ span.contact {
     font-family: "Futura-PT", sans-serif;
     font-size: 1rem;
 }
-/* end quotes */
+/* end reviews */
 
 /*-------------------------------------------- Footer */
 footer {
@@ -828,11 +776,11 @@ i.fab.fa-twitter {
 
 #contact {
   margin-top: 50px;
-  padding: 60px 40px;
 }
 
-#quotes {
+#reviews {
   margin-top: 50px;
   padding: 60px 40px;
 }
+
 /*.end sections*/
